Fix responsive issues on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -1931,6 +1931,11 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
    }
  }
 
+@media only screen and (max-width: 400px) {
+  #blog {
+    min-height: 600px;
+  }
+}
  #speaking {
    width: 100%;
    height: 100%;
@@ -2022,6 +2027,12 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
      width: auto;
      margin: auto;
      margin-bottom: 15px;
+   }
+ }
+
+ @media only screen and (max-width: 400px) {
+   #speaking {
+     min-height: 600px;
    }
  }
 /* ===================================================================
